Made the images responsive.
This change 'worked like magic'. It's based on:

http://stackoverflow.com/questions/11736363/responsive-images-with-css

My first foray into this was with:

http://webdesignerwall.com/tutorials/5-useful-css-tricks-for-responsive-design

I just simply don't believe this worked "out of the box"!

--- a/css/global.css
+++ b/css/global.css
@@ -19,3 +19,12 @@ aside#region-sidebar-first div.block-without-title img {
   margin-left: auto;
   margin-right: auto;
 }
+
+/* Trying to make my images 'responsive'. Used: 
+   http://stackoverflow.com/questions/11736363/responsive-images-with-css
+ */
+img {
+    max-width:100% !important;
+    height:auto;
+    display:block;
+}
