Adding 'conditional' display of tags/recent posts.
Following the suggestion in:

http://drupal.org/node/1622454

I just 'disable' the tags and recent posts block via CSS. It doesn't
feel quite right, but the overall result works. I really thought
I could get this via some combination of Context, Delta and Omega,
but see these URLs that suggest I have to bring in some other modules:

http://www.mediacurrent.com/blog/control-your-drupal-page-layout-context-and-delta
http://drupal.org/project/mobile_tools

--- a/css/global.css
+++ b/css/global.css
@@ -28,3 +28,16 @@ img {
     height:auto;
     display:block;
 }
+
+/* Reading http://drupal.org/node/1622454, this is probably the
+ * easiest way to hide the tags block when you're on a mobile
+ * device. Sweeps it from view, but the device likely still downloads 
+ * it.
+ */
+section#block-tagadelic-2 {
+  display: none;
+}
+
+section#block-views-tracker-block-1 {
+  display: none;
+}
