--- a/css/techtalk12-alpha-default-normal.css
+++ b/css/techtalk12-alpha-default-normal.css
@@ -1,3 +1,14 @@
-/* This file will hold styles that are loaded using the same media query as the normal grid. */
-/* If you are using the default media queries provided by Omega, these styles will also
- *  apply to the widescreen layout unless they are overridden by the widescreen styles. */
+/* This file will hold styles that are loaded using the same media query as the
+ * normal grid. */
+/* If you are using the default media queries provided by Omega, these styles
+ * will also apply to the widescreen layout unless they are overridden by the
+ * widescreen styles. */
+
+/* See global.css */
+section#block-tagadelic-2 {
+  display: block;
+}
+
+section#block-views-tracker-block-1 {
+  display: block;
+}
