--- a/css/techtalk12-alpha-default-wide.css
+++ b/css/techtalk12-alpha-default-wide.css
@@ -1,1 +1,11 @@
-/* This file will hold styles that are loaded using the same media query as the wide grid. */
+/* This file will hold styles that are loaded using the same media query as the
+ * wide grid. */
+
+/* See global.css */
+section#block-tagadelic-2 {
+  display: block;
+}
+
+section#block-views-tracker-block-1 {
+  display: block;
+}
