Made images 'responsive' only on front page.
If you're viewing an individual post, you can afford to get
my images in all their size. I'll have to revisit this later.

--- a/css/global.css
+++ b/css/global.css
@@ -22,8 +22,10 @@ aside#region-sidebar-first div.block-without-title img {
 
 /* Trying to make my images 'responsive'. Used: 
    http://stackoverflow.com/questions/11736363/responsive-images-with-css
+
+   NOTE: I only do this for the 'front' page.
  */
-img {
+body.front img {
     max-width:100% !important;
     height:auto;
     display:block;
