Removed left sidebar from non-front page on mobile.
If you're on a page that is NOT the front page, and you're on mobile
(i.e. the global-mobile-first CSS), then do NOT display the sidebar.
This seems to work pretty well! If you're on mobile, you get right to
the article, without the sidebar. If you're on a tablet, or a desktop
browser, you get 'the full layout.'

--- a/css/global.css
+++ b/css/global.css
@@ -60,3 +60,11 @@ div.field-name-taxonomy-vocabulary-2 div.field-items div.field-item {
 h2.node-title {
   margin-bottom: 5px;
 }
+
+/*
+ * If you're not on the front page, and you're a story, then 
+ * do NOT display the sidebar region in the mobile-first layout.
+ */
+body.not-front div.region-sidebar-first-inner {
+  display: none;
+}
