Removing underlines from anchor tags.
http://stackoverflow.com/questions/2041388/how-to-remove-the-underline-for-anchorslinks

I did have to use Chrome tools to figure out that the anchor tags
were 'more specifically' a:link and a:visited.

--- a/css/global.css
+++ b/css/global.css
@@ -78,3 +78,11 @@ h2.node-title {
 body.not-front div.region-sidebar-first-inner {
   display: none;
 }
+
+/* Removing underlines from all anchor tags.
+ *
+ * http://stackoverflow.com/questions/2041388/how-to-remove-the-underline-for-anchorslinks
+ */
+a:link, a:visited {
+  text-decoration: none;
+}
